FIX - homepage > testimonial > p contrast issue

--- a/style.scss
+++ b/style.scss
@@ -1258,7 +1258,8 @@ body .exceptional-travel-button__text-only {
 }
 
 .main-content .facts__regions p,
-.main-content .shortcut-thumbs .shortcut-wrapper p {
+.main-content .shortcut-thumbs .shortcut-wrapper p,
+.main-content .testi p {
     color: white;
 }
 
